fixed overlapping issue

--- a/s.css
+++ b/s.css
@@ -120,7 +120,6 @@ h1 {
     box-shadow: 0px 8px 16px 0px #00000033;
     border-radius:2px;
     z-index: 1;
-    overflow-y: none;
 }
 .index-dropdown-content button {
     color: #070a12;
@@ -158,7 +157,13 @@ h1 {
     background-color:#070a12;
 }
 .card-text {
-    margin-top:17.5%;
+    white-space: normal;
+    word-wrap: break-word;
+}
+
+.card-text-content {
+    word-wrap: break-word;
+    line-height: normal;
 }
 .answer-box {
     font-size:1.5em;
@@ -184,9 +189,18 @@ h1 {
 #check-button, #back-button {
     font-size:2em;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1600px) {
+    .card {
+        font-size:4em;
+    }
+}
+@media screen and (max-width: 1100px) {
     .card {
         font-size:3em;
+    }
+}
+@media screen and (max-width: 700px) {
+    .card {
         width:70vw;
     }
     .card-text {
@@ -197,6 +211,11 @@ h1 {
     }
     input {
         width:80vw;
+    }
+}
+@media screen and (max-width: 600px) {
+    .card {
+        font-size:2em;
     }
 }
 @media screen and (max-width: 400px) {
